k8s/api-gatewayclass.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: api-gatewayclass
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
