k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app: myapi
spec:
  selector:
    app: myapi
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
