k8s/api-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata: 
  name: api-gateway
spec:
  gatewayClassName: api-gatewayclass
  listeners:
    - name: http
      protocol: HTTP
      port: 80
